* src/html/classic/css/gsa-base.css: Don't set min-height for radio or checkbox labels. This prevents to align them vertically in the middle.
git-svn-id: svn+ssh://scm.wald.intevation.org/openvas/trunk/gsa@25093 423fd1db-d629-0410-8442-d21db03e70f4

--- a/src/html/classic/css/gsa-base.css
+++ b/src/html/classic/css/gsa-base.css
@@ -137,7 +137,6 @@ input[type="checkbox"] {
 .radio label,
 .checkbox label {
   padding-left: 20px;
-  min-height: 20px;
   margin-bottom: 0;
   font-weight: normal;
   cursor: pointer;
